--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
+	<h1>Num to Num</h1>
+	<p>Playing to: Num</p>
 
+	<input type="number" name="playToScore">
+	<button class="btn btn-primary">Player One</button>
+	<button class="btn btn-primary">Player Two</button>
+	<button class="btn btn-primary">Reset</button>
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
