Finished the scoreKeeper

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
-	<h1>Num to Num</h1>
-	<p>Playing to: Num</p>
-
+	<div class="container">
+	<h1> <span>Num </span> To <span>Num</span></h1>
+	<p>Playing to: <span>Num </span></p>
 	<input type="number" name="playToScore">
 	<button class="btn btn-primary">Player One</button>
 	<button class="btn btn-primary">Player Two</button>
 	<button class="btn btn-primary">Reset</button>
+	</div>
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
