Added a min value to input box

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="container">
 	<h1> <span>Num </span> To <span>Num</span></h1>
 	<p>Playing to: <span>Num </span></p>
-	<input type="number" name="playToScore">
+	<input type="number" name="playToScore" min="0">
 	<button class="btn btn-primary">Player One</button>
 	<button class="btn btn-primary">Player Two</button>
 	<button class="btn btn-primary">Reset</button>
